auto_scaling_and_secrets/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: docker.io/mahmoudabdelgowad/m-images:3.0
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
