auto_scaling_and_secrets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service 
            port:
              number: 9090
